tests/fixtures/invalid/pointer_ordering_different_arrays.c
int main(void) {
    int left[2] = {1, 2};
    int right[2] = {3, 4};
    return left < right;
}
